# Mybipedal-deploy

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt
src/module/control_module/: CMakeLists.txt
src/module/control_module/cfg/: rl_mybipedal.yaml  rl_mybipedal_sim.yaml
src/module/control_module/include/control_module/: control_module.h  controller_base.h  global.h  pd_controller.h  rl_controller.h  state_machine.h  types.h  utilities.h
src/module/control_module/src/: control_module.cc  controller_base.cc  global.cc  pd_controller.cc  rl_controller.cc  utilities.cc
src/module/imu_module/: CMakeLists.txt
src/module/imu_module/cfg/: imu.yaml
src/module/imu_module/dm_imu_l1/: CMakeLists.txt
src/module/imu_module/dm_imu_l1/src/: bsp_crc.cpp  imu_driver.cpp  main.cpp
src/module/imu_module/src/: imu_module.cc
src/module/joint_driver_module/: CMakeLists.txt
src/module/joint_driver_module/cfg/: joint_control.yaml
src/module/joint_driver_module/robstride_controller/: CMakeLists.txt  can_setup.sh
src/module/joint_driver_module/robstride_controller/example/: CMakeLists.txt  main.cpp
src/module/joint_driver_module/src/: joint_driver_module.cc
src/module/joy_stick_module/: CMakeLists.txt
src/module/joy_stick_module/cfg/: joy_mybipedal.yaml
src/module/joy_stick_module/src/: joy.cc  joy_stick_module.cc  joy_vel_limiter.cc
src/module/sim_module/: CMakeLists.txt
src/module/sim_module/cfg/: sim_x1.yaml
src/module/sim_module/src/: sim_module.cc
src/pkg/pkg1/: CMakeLists.txt  pkg_main.cc
src/protocols/my_ros2_proto/: CMakeLists.txt
(+56 files in other folders)
